# hsnixpkgs

./: cabal.project  hie.yaml  stack.yaml
builderlib/boot/: default.nix  hsnixpkgs-boot-builderlib.cabal  hsnixpkgs-builderlib-boot.cabal  package.yaml
builderlib/boot/src/HsNixPkgs/Boot/Develop/BuildSystem/: Gnu.hs
builderlib/boot/src/HsNixPkgs/Boot/StdEnv/: PropagatedDep.hs
compile-builder/: compile-builder.cabal  default.nix  package.yaml
compile-builder/app/: Main.hs
haskell-gen-package/: haskell-gen-package.cabal
haskell-gen-package/proc-name/Language/Haskell/GenPackage/: BuildMod.hs
haskell-gen-package/proc-name/Language/Haskell/GenPackage/BuildMod/: TH.hs  Types.hs
haskell-gen-package/src/Language/Haskell/: GenPackage.hs
haskell-gen-package/src/Language/Haskell/GenPackage/: Str.hsig  StringMod.hs  SynMod.hs  Types.hs
hsnixpkgs/: hsnixpkgs.cabal  package.yaml
hsnixpkgs/dependent/HsNixPkgs/: Dependent.hs
hsnixpkgs/dependent/HsNixPkgs/Dependent/: TH.hs  Types.hs
hsnixpkgs/depstr/HsNixPkgs/HsBuilder/: DepStr.hs
hsnixpkgs/depstr/Language/Haskell/GenPackage/: Str.hs
hsnixpkgs/src/HsNixPkgs/: Dependent.hs  ExtendDrv.hs  SetupHook.hs  System.hs  Util.hs
hsnixpkgs/src/HsNixPkgs/Dependent/: TH.hs  Types.hs
hsnixpkgs/src/HsNixPkgs/Develop/: NativeLibrary.hs
hsnixpkgs/src/HsNixPkgs/Develop/BuildSystem/: Gnu.hs
hsnixpkgs/src/HsNixPkgs/Develop/C/: Library.hs
hsnixpkgs/src/HsNixPkgs/Develop/Haskell/: Package.hs
hsnixpkgs/src/HsNixPkgs/ExtendDrv/: FileDrv.hs
hsnixpkgs/src/HsNixPkgs/HsBuilder/: DepStr.hs  Generate.hs  KVMod.hs  OutputMod.hs  Util.hs
hsnixpkgs/src/HsNixPkgs/HsBuilder/Internal/: BuildMod.hs
hsnixpkgs/src/HsNixPkgs/HsBuilder/Internal/BuildMod/: TH.hs  Types.hs
hsnixpkgs/src/HsNixPkgs/SetupHook/: Executable.hs
hsnixpkgs/src/HsNixPkgs/StdEnv/: MakeDeriv.hs  StdEnv.hs
hsnixpkgs/src/HsNixPkgs/StdEnv/BootTools/: Derivation.hs  RequireFile.hs  TH.hs
hsnixpkgs/src/HsNixPkgs/StdEnv/Linux/GLibc/: Amd64.hs
hsnixpkgs/src/HsNixPkgs/StdEnv/Linux/Musl/: Amd64.hs
hsnixpkgs/src/HsNixPkgs/StdEnv/Linux/SupportTools/: Amd64.hs
hsnixpkgs/src/HsNixPkgs/StdEnv/MakeDeriv/: CompileBuilder.hs
hsnixpkgs/src/HsNixPkgs/System/: Abi.hs  Cpu.hs  System.hs  Vendor.hs
hsnixpkgs/stdenv/spec/linux/amd64/: glibc.yaml  musl.yaml  support-tool.yaml
hsnixpkgs/stdenv/unpack-th/HsNixPkgs/StdEnv/BootTools/: TH.hs  UnpackArg.hs
hsnixpkgs/system/HsNixPkgs/System/: Cpu.hs  Kernel.hs  System.hs
project-config/: cabal.project  project-config.cabal
project-config/app/: Main.hs  Utils.hs
project-config/app/Lib/: BuilderLib.hs  GenPkgs.hs  HsNixPkgs.hs  StdEnv.hs
stdenv/nix/: dependencies.nix  make-bootstrap-tools.nix  nix-archive.nix
stdenv/pack/: default.nix  hsnixpkgs-stdenv-pack.cabal  package.yaml
stdenv/pack/app/linux/: Main.hs
stdenv/pack/src/HsNixPkgs/BootTools/: Derivation.hs  ReferenceGraph.hs  StorePath.hs  SupportTools.hs  Type.hs
stdenv/pack/types/HsNixPkgs/BootTools/: Types.hs
stdenv/unpack/: default.nix  hsnixpkgs-stdenv-unpack.cabal  package.yaml
stdenv/unpack/app/linux/: Main.hs
stdenv/unpack/cbits/: rewrite.c
stdenv/unpack/include/: store_path.h
stdenv/unpack/src/HsNixPkgs/BootTools/: HashRewrite.hs
