cabal-version: 3.4
name:          compile-builder
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
build-type:    Simple

executable compile-builder
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        filepath ^>=1.4,
        directory ^>=1.3,
        process ^>=1.6
