cabal-version: 3.4
name:          project-config
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Lane
build-type:    Simple

executable config
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        Lib.BuilderLib
        Lib.GenPkgs
        Lib.HsNixPkgs
        Lib.StdEnv
        Utils

    default-language:   Haskell2010
    default-extensions: QuasiQuotes OverloadedStrings
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17.0.0,
        containers,
        filepath,
        directory,
        Cabal-hs,
        cabal-install,
        Cabal-syntax,
        Cabal
