cabal-version: 3.4
name:          hsnixpkgs-builderlib-boot
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
build-type:    Simple

library
    exposed-modules:
        HsNixPkgs.Boot.Build.Fixup
        HsNixPkgs.Boot.Build.Fixup.CompressManPages
        HsNixPkgs.Boot.Build.Fixup.MakeSymlinkRelative
        HsNixPkgs.Boot.Build.Fixup.MakeSymlinkRelative.FilePath
        HsNixPkgs.Boot.Build.Fixup.Move
        HsNixPkgs.Boot.Build.Fixup.MoveDocs
        HsNixPkgs.Boot.Build.Fixup.MultipleOutput
        HsNixPkgs.Boot.Build.Fixup.PatchShebang
        HsNixPkgs.Boot.Build.Fixup.PruneLibtoolFiles
        HsNixPkgs.Boot.Build.Fixup.Strip
        HsNixPkgs.Boot.Build.Hook
        HsNixPkgs.Boot.Build.Main
        HsNixPkgs.Boot.Build.Patch
        HsNixPkgs.Boot.Build.Phase
        HsNixPkgs.Boot.Build.Unpack
        HsNixPkgs.Boot.Build.Util
        HsNixPkgs.Boot.Build.Util.FileType
        HsNixPkgs.Boot.Develop.BuildSystem.Gnu
        HsNixPkgs.Boot.StdEnv.PropagatedDep

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        text ^>=2.0,
        bytestring ^>=0.11,
        filepath ^>=1.4,
        directory ^>=1.3,
        process ^>=1.6,
        time ^>=1.9,
        unix ^>=2.8,
        mtl ^>=2.2,
        exceptions ^>=0.10,
        deepseq ^>=1.4,
        template-haskell
