cabal-version: 3.4
name:          hsnixpkgs-stdenv-pack
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
build-type:    Simple

library
    exposed-modules:
        HsNixPkgs.BootTools.Derivation
        HsNixPkgs.BootTools.ReferenceGraph
        HsNixPkgs.BootTools.StorePath
        HsNixPkgs.BootTools.SupportTools
        HsNixPkgs.BootTools.Type

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings Strict
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        text >=1.2 && <2.1,
        bytestring >=0.10 && <0.12,
        filepath ^>=1.4.100,
        directory ^>=1.3.8,
        mtl ^>=2.2,
        hashable ^>=1.4.2,
        unordered-containers ^>=0.2,
        lzma,
        binary ^>=0.8,
        aeson ^>=2.1,
        cryptonite >=0.29 && <0.31,
        nix-archive

executable pack-stdenv-linux
    main-is:            Main.hs
    hs-source-dirs:     app/linux
    default-language:   Haskell2010
    default-extensions: OverloadedStrings Strict
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        text >=1.2 && <2.1,
        bytestring >=0.10 && <0.12,
        filepath ^>=1.4.100,
        directory ^>=1.3.8,
        yaml ^>=0.11,
        hsnixpkgs-stdenv-pack

    if !os(linux)
        buildable: False
