cabal-version: 3.4
name:          hsnixpkgs-stdenv-unpack
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
build-type:    Simple

library
    exposed-modules:    HsNixPkgs.BootTools.HashRewrite
    cc-options:         -O3
    c-sources:          cbits/rewrite.c
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings Strict
    include-dirs:       include
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        text ^>=2.0,
        bytestring ^>=0.11

executable stdenv-unpack-linux
    main-is:          Main.hs
    hs-source-dirs:   app/linux
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        text ^>=2.0,
        bytestring ^>=0.11,
        nix-archive,
        lzma,
        binary ^>=0.8,
        filepath ^>=1.4.100,
        hsnixpkgs-stdenv-unpack

    if !os(linux)
        buildable: False
